Fixed image sizing and alignment

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,5 @@
 .card {
+	align-items: center;
 	background-color: #424242;
 	display: flex;
 	padding: 16px;
@@ -8,7 +9,7 @@
 }
 
 .card__image {
-	width: 30%;
+	width: 33%;
 	border-radius: 8px;
 	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.25);
 }
@@ -55,10 +56,10 @@
 
 	.card__image {
 		width: 100%;
-		margin-bottom: 16px;
+		margin-bottom: 8px;
 	}
 
 	.card-text {
-		padding-left: 0px;
+		padding-left: unset;
 	}
 }
